# webserver

./: Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: error.html  index.html  projects.json
templates/css/: style.css
