[package]
name = "website"
version = "1.0.0"
authors = ["William Haugen <haugenw94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
env_logger = "0.7.1"
tera = "1.4.0"
actix-http = "1.0.1"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.1.1"
actix-files = "0.2.2"
openssl = "0.10.30"
actix-web-middleware-redirect-https = "1.0.0"
serde = "1.0.114"
serde_json = "1.0.57"
