[package]
name = "website"
version = "1.0.0"
authors = ["William Haugen <haugenw94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
env_logger = "0.9.0"
tera = "1.15.0"
actix-web = { version = "4.0.1", features = ["openssl", "rustls"] }
actix-files = "0.6.0"
serde = {version= "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "0.2.1"